@@ -118,8 +118,12 @@ let print_specific_operation printreg op ppf arg =
 
 (* Specific operations that are pure *)
 
-let operation_is_pure _ = true
+let operation_is_pure = function
+  | Ialloc_far _ -> false
+  | _ -> true
 
 (* Specific operations that can raise *)
 
-let operation_can_raise _ = false
+let operation_can_raise = function
+  | Ialloc_far _ -> true
+  | _ -> false
